force-app/main/default/objects/Resource_Resource_Relationship__c/Resource_Resource_Relationship__c.object-meta.xml
<CustomObject>
    <label>Resource Relationship</label>
    <nameField>
        <displayFormat>RRR-{000000}</displayFormat>
        <label>Resource Resource Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>