force-app/main/default/objects/Resource_Resource_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Leave Approver</fullName>
            </value>
            <value>
                <fullName>Resource Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>