force-app/main/default/objects/Resource_Resource_Relationship__c/fields/Reports_To_Role__c.field-meta.xml
<CustomField>
    <fullName>Reports_To_Role__c</fullName>
    <formula>Resource_Reports_To__r.Resource_Role__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reports To Role</label>
    <type>Text</type>
</CustomField>