force-app/main/default/objects/Resource_Resource_Relationship__c/fields/Resource_Reports_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Reports_Name__c</fullName>
    <formula>Resource_Reports_To__r.FirstName +&apos; &apos;+ Resource_Reports_To__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Reports Name</label>
    <type>Text</type>
</CustomField>