force-app/main/default/objects/Resource_Resource_Relationship__c/fields/Resource_Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Resource_Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Reports To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Relationships_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>