force-app/main/default/objects/Resource_Resource_Relationship__c/fields/Resource_Reports_To_User__c.field-meta.xml
<CustomField>
    <fullName>Resource_Reports_To_User__c</fullName>
    <formula>Resource_Reports_To__r.EMS_TM_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Reports To User</label>
    <type>Text</type>
</CustomField>