force-app/main/default/objects/Resource_Resource_Relationship__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <formula>Resource__r.Resource_Role__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Role</label>
    <type>Text</type>
</CustomField>