force-app/main/default/objects/Resource_Resource_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Resource_Reports_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>